                changed backend added to ADD_SDLIB_LIBRARY

    main/
        main.cpp
    interfaces/
        playerpref.h
            added HM_ADRV_FILE define
    modules/
        racing/standardgame
            racesituation.cpp
                change deltaTime to be constant value
        sound/snddefault/
            CMakeLists.txt
                added frontend
            grsound.cpp
                added intervention sound initialization
            OpenalSound.cpp
                added check for playing state
            OpenalSoundInterface.cpp
                added updateInterventionSounds()
                added update and starting of intervention sounds
            SoundInterface.cpp
                added setInterventionSound()
            SoundInterface.h
                added setInterventionSound()
                added intervention_sounds map
        userinterface/
            legacymenu.h 
                  ActivateResearcherMenu()
            legacymenu.cpp
                  included "ResearcherMenu.h"
                  included "DataSelectionMenu.h"
                  added    ActivateResearcherMenu()
                  changed  backLoad()
                  changed  activate()
            racestopmenu.cpp
                RmStopRaceMenu()
                    changed  AssistedHuman is a human
            legacymenu/CMakeList.txt
                  added    ResearcherMenu.h and .cpp
                  added    DataSelectionMenu.h and .cpp
                  added    backend in both ADD_SDLIB_LIBRARY and ADD_SDLIB_INCLUDEDIR
                racescreens/
                    racerunningmenus.cpp
                        removed RmProgressiveTimeModifier implementation and calls
                    racestopmenu.cpp
                        removed rmProgressiveTimeModifier.start() call
        graphic/
            ssggraph/
                CMakeLists.txt added connection to frontend module
                grboard.cpp