@@ -55,12 +55,13 @@ Changed:
         sound/snddefault/
             CMakeLists.txt
                 added frontend
+                added backend
             grsound.cpp
                 added intervention sound initialization
             OpenalSound.cpp
                 added check for playing state
             OpenalSoundInterface.cpp
-                added updateInterventionSounds()
+                added UpdateInterventionSounds()
                 added update and starting of intervention sounds
             SoundInterface.cpp
                 added setInterventionSound()
